--- a/012-Live-Clock-and-Date/index.html
+++ b/012-Live-Clock-and-Date/index.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog Detail Page</title>
+  <title>Live Clock and Date</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="app">
     <div class="container">
-      <h1>{{ blog.title }}</h1>
-      <p>{{ blog.date }}</p>
-      <img :src="blog.imageUrl" :alt="blog.title" />
-      <p>{{ blog.content }}</p>
+      <h1>{{ currentTime }}</h1>
+      <p>{{ currentDate }}</p>
     </div>
   </div>
 
   <!-- Vue.js CDN -->
   <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
+
   <!-- Main JavaScript Dosyası -->
   <script src="main.js"></script>
 </body>
