--- a/023-Whatsapp-Chat-Component/index.html
+++ b/023-Whatsapp-Chat-Component/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WhatsApp Tarzı Chat Uygulaması</title>
+  <title>Whatsapp Chat Component</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 </head>
@@ -28,7 +28,7 @@
         <input type="text" v-model="newMessage" @keyup.enter="sendMessage" placeholder="Mesajınızı yazın">
       </div>
       <div v-else>
-        <p>Kişi seçiniz.</p>
+        <p>Select contact.</p>
       </div>
     </div>
   </div>
