--- a/004-Accordeon-Example/index.html
+++ b/004-Accordeon-Example/index.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accordeon - Sıkça Sorulan Sorular</title>
+  <title>Accordeon - FAQ</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color: #333; color: white;">
     <div id="app-watch">
         <p style="text-align: center;">Anlık Saat: {{ currentTime }}</p>
     </div>
-
     <div id="app">    
-    <h1 style="text-align: center; padding: 20px;">Sıkça Sorulan Sorular</h1>
+    <h1 style="text-align: center; padding: 20px;">FAQ</h1>
     <div v-for="faq in faqList" :key="faq.id">
       <div @click="toggleAccordion(faq.id)" class="accordion-header">
         {{ faq.question }}
@@ -22,11 +21,7 @@
       </div>
     </div>
   </div>
-
-  <!-- Vue.js CDN -->
   <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
-
-  <!-- Main JavaScript Dosyası -->
   <script src="main.js"></script>
 </body>
 </html>
