--- a/005-Slider-Pack/index.html
+++ b/005-Slider-Pack/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vue.js Tam Ekran Slider Örneği</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="app">
@@ -17,94 +18,7 @@
       <div class="arrows right" @click="nextSlide">&#8250;</div>
     </div>
   </div>
-
-  <!-- Vue.js CDN -->
   <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
-
-  <script>
-    const app = new Vue({
-      el: '#app',
-      data: {
-        slidePosition: 0,
-        sliderItems: [
-          "image.jpg",
-          "image2.jpg",
-          "image3.jpg",
-          "image4.jpg"
-        ]
-      },
-      methods: {
-        prevSlide() {
-          if (this.slidePosition < 0) {
-            this.slidePosition += window.innerWidth;
-          }
-        },
-        nextSlide() {
-          const sliderWidth = window.innerWidth * this.sliderItems.length;
-          const maxPosition = -(sliderWidth - window.innerWidth);
-
-          if (this.slidePosition > maxPosition) {
-            this.slidePosition -= window.innerWidth;
-          }
-        }
-      }
-    });
-  </script>
-
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-
-    .slider-container {
-      position: relative;
-      width: 100%;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-    .slider {
-      display: flex;
-      transition: transform 0.3s ease-in-out;
-      height: 100%;
-    }
-
-    .slide {
-      width: 100vw;
-      height: 100%;
-      flex-shrink: 0;
-    }
-
-    .slide img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .arrows {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 50px;
-      height: 50px;
-      background-color: rgba(255, 255, 255, 0.7);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 24px;
-      cursor: pointer;
-      z-index: 1;
-    }
-
-    .left {
-      left: 10px;
-    }
-
-    .right {
-      right: 10px;
-    }
-  </style>
+  <script src="main.js"></script>
 </body>
 </html>
