--- a/007-Navbar-Pack/index.html
+++ b/007-Navbar-Pack/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mobil Uyumlu Navbar Örneği</title>
+  <title>Responsive Navbar Pack</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,20 +17,16 @@
           <span></span>
         </div>
         <ul class="nav-links">
-          <li><a href="#">Anasayfa</a></li>
-          <li><a href="#">Hakkımızda</a></li>
-          <li><a href="#">Hizmetler</a></li>
-          <li><a href="#">İletişim</a></li>
-          <li><button @click="toggleDarkMode">Karanlık Mod</button></li>
+          <li><a href="#">Homepage</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Our Services</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><button @click="toggleDarkMode">Dark Mode</button></li>
         </ul>
       </div>
     </nav>
   </div>
-
-  <!-- Vue.js CDN -->
   <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
-
-  <!-- Main JavaScript Dosyası -->
   <script src="main.js"></script>
 </body>
 </html>
