--- a/022-3D-Object-Viewer/index.html
+++ b/022-3D-Object-Viewer/index.html
@@ -3,15 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Görüntüleme Örneği</title>
+  <title>3D Object Viewer</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <style>
-    body {
-      margin: 0;
-    }
-  </style>
 </head>
-<body>
+<body style="margin: 0;">
     <script src="main.js"></script>
 </body>
 </html>
