--- a/024-How-is-Weather/index.html
+++ b/024-How-is-Weather/index.html
@@ -18,6 +18,7 @@
       </div>
     </div>
   </div>
+  <script type='text/javascript' src='config.js'></script>
   <script src="main.js"></script>
 </body>
 </html>
